Navbar Collapse Person-icon fixed

--- a/css/email.css
+++ b/css/email.css
@@ -124,7 +124,6 @@ body {
   border-bottom: 1px solid #eee;
   padding-bottom: 10px;
   margin-bottom: 20px;
-  background: rgba(0, 100, 156, 0.31);
 }
 
 .email-header h3 {
